2015-12-26 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/worker_prefork_common.c: functions common to both the prefork
    and worker bridges, but not general enough bur rather specific to the worker
    model adopted by them
    * src/mod_rivet/rivet_lazy_mpm.c: further development, now capable of serving
    rivet requests, but needs to be completed.
    * src/mod_rivet/mod_rivet_common.c: more stuff moved from mod_rivet to this file
    * src/mod_rivet/mod_rivet.h: new data organization with bridge specific thread
    private data
    * src/mod_rivet/Tclwebapache.c: API changed from Tclwebreq pointers to 
    thread private data that is supposed to store most of the thread environment

2015-12-22 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_lazy_mpm.c: taking a snapshot of the current development
    as this code proved to be quite robust when stressed using 'ab'

2015-12-20 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_lazy_mpm.c: first prototype of a threaded bridge with
    reduced start up time and thread number optimization

2015-12-15 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_lazy_mpm.c: new lazy MPM bridge with a smoother workload 
    balancing (should work better for low to middle workloads)
    * src/mod_rivet/rivet_worker_mpm.c: improved code comments
    * src/mod_rivet/mod_rivet.c: handling of mpm_bridge configuration parameter.
    New bridge module search method
    * src/mod_rivet/rivet_config.c: new MpmBridge configuration directive

2015-12-13 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet/rivet_worker_mpm.c: changed in order to have a better handling
    of ::rivet::exit (the call to exit( ) is now carried out from within the
    supervising thread
    * src/mod_rivet/rivet_prefork_mpm.c: Adding exit command handler
    * src/mod_rivet/mod_rivet.c: new central Rivet_Finalize method that calls
    any bridge module finalization. The function deletes the thread key to