@@ -66,8 +66,11 @@ typedef struct lazy_tcl_worker {
 
 typedef struct vhost_iface {
     apr_uint32_t*       idle_threads_cnt;       /* */
+    //apr_uint32_t*       threads_count;          /* */
+    int                 threads_count;
     apr_thread_mutex_t* mutex;
-    apr_array_header_t* array;                   /* available threads  */
+    apr_array_header_t* array;                  /* available threads  */
+    int                 server_shutdown;
 } vhost;
 
 typedef struct mpm_bridge_status {
@@ -91,13 +94,14 @@ typedef struct mpm_bridge_specific {
 #define DEFAULT_HEADER_TYPE "text/html"
 #define BASIC_PAGE          "<b>Lazy Bridge</b>"
 
-#define MOD_RIVET_QUEUE_SIZE        100
+#define MOD_RIVET_QUEUE_SIZE 100
 
 static void* APR_THREAD_FUNC request_processor (apr_thread_t *thd, void *data)
 {
     lazy_tcl_worker* w = (lazy_tcl_worker*) data; 
     rivet_thread_private*   private;
     void*                   function;
+    int                     idx;
 
     private = Rivet_CreatePrivateData();
     if (private == NULL) 
@@ -116,8 +120,10 @@ static void* APR_THREAD_FUNC request_processor (apr_thread_t *thd, void *data)
     w->nreqs = 0;
     Tcl_RegisterChannel(private->ext->interp->interp,*private->channel);
 
+    private->ext->interp->scripts = Rivet_RunningScripts (private->pool,private->ext->interp->scripts,private->ext->conf );
+
     Rivet_PerInterpInit(private->ext->interp,private,module_globals->server,private->pool);
-        
+    
     function = private->ext->conf->rivet_child_init_script;
     if (function)
     {
@@ -153,17 +159,21 @@ static void* APR_THREAD_FUNC request_processor (apr_thread_t *thd, void *data)
         Tcl_DecrRefCount(tcl_child_init);
     }
 
+    idx = private->ext->conf->idx;
     do 
     {
         //char* page;
         int   http_code;
-        int   idx = private->ext->conf->idx;
 
         apr_thread_mutex_lock(w->mutex1);
         apr_atomic_inc32(module_globals->mpm->vhosts[idx].idle_threads_cnt);
-        while (w->status != init) {
+        while ((w->status != init) && (w->status != thread_exit)) {
             apr_thread_cond_wait(w->condition1,w->mutex1);
         } 
+        if (w->status == thread_exit) {
+            private->ext->keep_going = 0;
+            continue;
+        }
 
         w->status = processing;
         w->nreqs++;
@@ -173,6 +183,8 @@ static void* APR_THREAD_FUNC request_processor (apr_thread_t *thd, void *data)
         /* Content generation */
 
         http_code = Rivet_SendContent(private,w->r);
+
+        if (module_globals->mpm->vhosts[idx].server_shutdown) continue;
 
         /*
         ap_set_content_type(w->r,apr_pstrdup(w->r->pool,DEFAULT_HEADER_TYPE));
@@ -203,6 +215,12 @@ static void* APR_THREAD_FUNC request_processor (apr_thread_t *thd, void *data)
 
     } while (private->ext->keep_going);
 
+    apr_thread_mutex_lock(module_globals->mpm->vhosts[idx].mutex);
+    (module_globals->mpm->vhosts[idx].threads_count)--;
+    apr_thread_mutex_unlock(module_globals->mpm->vhosts[idx].mutex);
+
+    ap_log_error(APLOG_MARK,APLOG_DEBUG,APR_SUCCESS,module_globals->server, "processor thread orderly exit");
+    apr_thread_exit(thd,APR_SUCCESS);
     return NULL;
 }
 
@@ -231,6 +249,8 @@ void Lazy_MPM_ChildInit (apr_pool_t* pool, server_rec* server)
 
     module_globals->mpm = apr_pcalloc(pool,sizeof(mpm_bridge_status));
 
+    //module_globals->mpm->vhosts = (vhost *) apr_pcalloc(pool,sizeof(vhost) * module_globals->vhosts_count);
+
     rv = apr_thread_mutex_create(&module_globals->mpm->mutex,APR_THREAD_MUTEX_UNNESTED,pool);
     ap_assert(rv == APR_SUCCESS);
     rv = apr_thread_cond_create(&module_globals->mpm->condition, pool); 
@@ -252,9 +272,10 @@ void Lazy_MPM_ChildInit (apr_pool_t* pool, server_rec* server)
         ap_assert(array != NULL);
         module_globals->mpm->vhosts[vh].array = array;
 
-        //ap_assert(apr_queue_create(&module_globals->mpm->vhosts[vh].queue,MOD_RIVET_QUEUE_SIZE,pool) == APR_SUCCESS);
         module_globals->mpm->vhosts[vh].idle_threads_cnt = (apr_uint32_t *) apr_pcalloc(pool,sizeof(apr_uint32_t));
         apr_atomic_set32(module_globals->mpm->vhosts[vh].idle_threads_cnt,0);
+        module_globals->mpm->vhosts[vh].threads_count = 0;
+        module_globals->mpm->vhosts[vh].server_shutdown = 0;
     }
 }
 
@@ -266,24 +287,29 @@ int Lazy_MPM_Request (request_rec* r,rivet_req_ctype ctype)
     apr_array_header_t* array;
     apr_thread_mutex_t* mutex;
 
-    //do {
-    //     rv = apr_queue_pop(module_globals->mpm->vhosts[conf->idx].queue, &v);
-    //} while (rv == APR_EINTR);
-    //w = (lazy_tcl_worker*) v;
-
     /* If the array is empty we create a new worker thread */
 
     mutex = module_globals->mpm->vhosts[conf->idx].mutex;
     array = module_globals->mpm->vhosts[conf->idx].array;
     apr_thread_mutex_lock(mutex);
+
+    if (module_globals->mpm->vhosts[conf->idx].server_shutdown == 1) {
+        ap_log_rerror(APLOG_MARK, APLOG_ERR, APR_EGENERAL, r,
+                      MODNAME ": http request aborted during child process shutdown");
+        apr_thread_mutex_unlock(mutex);
+        return HTTP_INTERNAL_SERVER_ERROR;
+    }
+
     if (apr_is_empty_array(array))
     {
         w = create_worker(module_globals->pool,r->server);
+        (module_globals->mpm->vhosts[conf->idx].threads_count)++; 
     }
     else
     {
         w = *(lazy_tcl_worker**) apr_array_pop(array);
     }
+
     apr_thread_mutex_unlock(mutex);
     
     apr_thread_mutex_lock(w->mutex1);
@@ -312,15 +338,80 @@ int Lazy_MPM_Request (request_rec* r,rivet_req_ctype ctype)
 rivet_thread_interp* Lazy_MPM_Interp(rivet_thread_private *private,
                                      rivet_server_conf* conf)
 {
-    return private->ext->interp;   
+    return private->ext->interp;
+}
+
+apr_status_t Lazy_MPM_Finalize (void* data)
+{
+    int vh;
+    rivet_server_conf* conf = RIVET_SERVER_CONF(((server_rec*) data)->module_config);
+   
+    for (vh = 0; vh < module_globals->vhosts_count; vh++)
+    {
+        int try;
+        int count;
+        apr_array_header_t* array;
+        apr_thread_mutex_t* mutex;
+
+        mutex = module_globals->mpm->vhosts[vh].mutex;
+        array = module_globals->mpm->vhosts[vh].array;
+        apr_thread_mutex_lock(mutex);
+        module_globals->mpm->vhosts[vh].server_shutdown = 1;
+        try = 0;
+        do {
+
+            count = module_globals->mpm->vhosts[vh].threads_count;
+            if (((conf->idx == vh) && (count == 1)) || (count == 0)) { break; } 
+
+            while (!apr_is_empty_array(array)) 
+            {
+                lazy_tcl_worker*    w;
+
+                w = *(lazy_tcl_worker**) apr_array_pop(array); 
+                apr_thread_mutex_lock(w->mutex1);
+                w->r        = NULL;
+                w->status   = thread_exit;
+                apr_thread_cond_signal(w->condition1);
+                apr_thread_mutex_unlock(w->mutex1);
+            }
+            apr_sleep(10000);
+
+        } while ((try++ < 3));
+        apr_thread_mutex_unlock(mutex);
+    }
+
+    return APR_SUCCESS;
+}
+
+int Lazy_MPM_ExitHandler(int code)
+{
+    rivet_thread_private*   private;
+
+    RIVET_PRIVATE_DATA_NOT_NULL(rivet_thread_key,private)
+
+    /* This is not strictly necessary, because this command will 
+     * eventually terminate the whole processes */
+
+    /* This will force the current thread to exit */
+
+    private->ext->keep_going = 0;
+
+    module_globals->mpm->exit_command = 1;
+    module_globals->mpm->exit_command_status = code;
+
+    /* We now tell the supervisor to terminate the Tcl worker thread pool to exit
+     * and is sequence the whole process to shutdown by calling exit() */
+ 
+    Lazy_MPM_Finalize (private->r->server);
+    return TCL_OK;
 }
 
 RIVET_MPM_BRIDGE {
     NULL,
     Lazy_MPM_ChildInit,
     Lazy_MPM_Request,
+    Lazy_MPM_Finalize,
     NULL,
-    NULL,
-    NULL,
+    Lazy_MPM_ExitHandler,
     Lazy_MPM_Interp
 };
